--- a/iobroker/config.json
+++ b/iobroker/config.json
@@ -1,16 +1,16 @@
 {
   "name": "ioBroker",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "slug": "iobroker",
   "description": "Run ioBroker using the official Docker image as a Home Assistant Add-on.",
   "startup": "application",
   "boot": "auto",
-  "webui": "http://[HOST]:8081",
+  "webui": "http://[HOST]:[PORT:8081]",
   "host_network": true,
   "privileged": ["NET_ADMIN", "SYS_ADMIN"],
   "init": false,
   "hassio_api": false,
   "hassio_role": "default",
   "arch": ["aarch64", "armv7", "amd64"],
-  "image": "docker.io/iobroker/iobroker:latest"
+  "image": "iobroker/iobroker:latest"
 }
