--- a/iobroker/config.json
+++ b/iobroker/config.json
@@ -5,11 +5,18 @@
   "description": "Run ioBroker using the official Docker image as a Home Assistant Add-on.",
   "startup": "application",
   "boot": "auto",
-  "webui": "http://[HOST]:[PORT:8081]",
   "host_network": true,
   "privileged": ["NET_ADMIN", "SYS_ADMIN"],
   "init": false,
   "hassio_api": false,
   "hassio_role": "default",
-  "arch": ["aarch64", "armv7", "amd64"]
+  "arch": ["aarch64", "armv7", "amd64"],
+  "ingress": true,
+  "ingress_entry": "iobroker",
+  "ports": {
+    "7878/tcp": 7878
+  },
+  "ports_description": {
+    "7878/tcp": "Web interface"
+  }
 }
