--- a/iobroker/config.json
+++ b/iobroker/config.json
@@ -1,11 +1,11 @@
 {
   "name": "ioBroker",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "slug": "iobroker",
   "description": "Run ioBroker using the official Docker image as a Home Assistant Add-on.",
   "startup": "application",
   "boot": "auto",
-  "host_network": true,
+  "host_network": false,
   "privileged": ["NET_ADMIN", "SYS_ADMIN"],
   "init": false,
   "hassio_api": false,
