--- a/iobroker/config.json
+++ b/iobroker/config.json
@@ -6,12 +6,12 @@
   "startup": "application",
   "boot": "auto",
   "host_network": false,
+  "webui": "http://[HOST]:[PORT:8085]",
   "privileged": ["NET_ADMIN", "SYS_ADMIN"],
   "init": false,
   "hassio_api": false,
   "hassio_role": "default",
   "arch": ["aarch64", "armv7", "amd64"],
-  "ingress": true,
   "ports": {
     "8081/tcp": 8081
   },
